--- a/public/global.css
+++ b/public/global.css
@@ -1,31 +1,32 @@
-/* Selection */
-/* html {
-    user-select: none;
-} */
+/* BODY */
+body {
+  margin: 0;
+}
 
+/* Selection */
 ::selection {
-    background: rgb(173, 214, 255);
+  background: rgb(173, 214, 255);
 }
 
 /* Global Scrollbar Setting */
 ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
+  width: 12px;
+  height: 12px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgb(250, 250, 250);
+  border-radius: 0;
+  background-color: rgb(250, 250, 250);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    border-radius: 0;
-    background-color: rgb(190, 190, 190);
+  border-radius: 0;
+  background-color: rgb(190, 190, 190);
 }
 
 /* Mozilla Firefox Scrollbar */
 html {
-    scrollbar-color: rgb(190, 190, 190) rgb(250, 250, 250);
+  scrollbar-color: rgb(190, 190, 190) rgb(250, 250, 250);
 }
