--- a/public/global.css
+++ b/public/global.css
@@ -1,22 +1,4 @@
-/* Global Scrollbar Setting */
-::-webkit-scrollbar {
-  width: 6px;
-  height: 12px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 0;
-  background-color: rgb(250, 250, 250);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background-color: rgb(190, 190, 190);
-}
-
-/* Mozilla Firefox Scrollbar */
+/* Mozilla & Firefox Scrollbar */
 html {
   scrollbar-color: rgb(190, 190, 190) rgb(250, 250, 250);
 }
