--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,12 @@
+/* Selection */
+html {
+  user-select: none;
+}
+
+::selection {
+  background: rgb(173, 214, 255);
+}
+
 /* Mozilla & Firefox Scrollbar */
 html {
   scrollbar-color: rgb(190, 190, 190) rgb(250, 250, 250);
